--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Ruvani Karandana</title>
   </head>
   <body>
-    Hello World
+  <H1>Hello, Code School!</H1>
+
+  <ul>
+    <li>jQuery</li>
+    <li>Angular JS</li>
+  </ul>
 
 
   </body>
